# schemalint

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cliff.toml  dist-workspace.toml  generate_benchmark_fixtures.py  lefthook.yml  release-please-config.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release-please.yml  release.yml
benches/: schemalint_benchmarks.rs
crates/schemalint/: Cargo.toml
crates/schemalint-conformance/: Cargo.toml
crates/schemalint-conformance/src/: lib.rs  main.rs  truth.rs
crates/schemalint-conformance/tests/: server_integration_tests.rs  truth_integration_tests.rs
crates/schemalint-docgen/: Cargo.toml
crates/schemalint-docgen/src/: main.rs
crates/schemalint-python/: Cargo.toml  README.md  pyproject.toml
crates/schemalint-python/python/schemalint/: __init__.py  cli.py
crates/schemalint-python/src/: main.rs
crates/schemalint/benches/: schemalint_benchmarks.rs
crates/schemalint/profiles/truth/: openai.truth.toml
crates/schemalint/src/: cache.rs  ingest.rs  lib.rs  profiles.rs  subprocess.rs
crates/schemalint/src/cli/: args.rs  check.rs  check_node.rs  check_python.rs  discover.rs  docs_url.rs  emit_gha.rs  emit_human.rs  emit_json.rs  emit_junit.rs  emit_sarif.rs  glob.rs  mod.rs  node_config.rs  pipeline.rs  pyproject.rs  server.rs
crates/schemalint/src/ir/: arena.rs  mod.rs
crates/schemalint/src/node/: mod.rs  resolve.rs
crates/schemalint/src/normalize/: desugar.rs  dialect.rs  mod.rs  refs.rs  traverse.rs
crates/schemalint/src/profile/: mod.rs  parser.rs
crates/schemalint/src/python/: mod.rs
crates/schemalint/src/rules/: class_a.rs  class_b.rs  metadata.rs  mod.rs  registry.rs  semantic.rs
crates/schemalint/src/rules/class_b/: array.rs  budget.rs  helpers.rs  object.rs  refs.rs  root.rs
crates/schemalint/tests/: cache_tests.rs  cli_tests.rs  corpus_tests.rs  integration_tests.rs  ir_tests.rs  node_tests.rs  normalizer_tests.rs  profile_tests.rs  property_tests.rs  provider_limits_tests.rs  python_tests.rs  rules_tests.rs  server_tests.rs  snapshot_tests.rs  structural_tests.rs
crates/schemalint/tests/corpus/: README.md  ant_schema_01.expected  ant_schema_01.json  ant_schema_02.expected  ant_schema_02.json  ant_schema_03.expected  ant_schema_03.json  ant_schema_04.expected  ant_schema_04.json  ant_schema_05.expected  ant_schema_05.json  ant_schema_06.expected  ant_schema_06.json  ant_schema_07.expected  ant_schema_07.json  ant_schema_08.expected  ant_schema_08.json  ant_schema_09.expected  ant_schema_09.json  ant_schema_10.expected  ant_schema_10.json  ant_schema_11.expected  ant_schema_11.json  ant_schema_12.expected  ant_schema_12.json  ant_schema_13.expected  ant_schema_13.json  ant_schema_14.expected  ant_schema_14.json  ant_schema_15.json  ant_schema_16.json  ant_schema_17.expected  ant_schema_17.json  ant_schema_18.json  ant_schema_19.expected  ant_schema_19.json  ant_schema_20.expected  ant_schema_20.json  ant_schema_21.expected  ant_schema_21.json  (+93 more)
crates/schemalint/tests/fixtures/: fake_discover_error.sh  fake_discover_error_few_stderr.sh  fake_invalid_response.sh
crates/schemalint/tests/fixtures/pydantic_fixture/: __init__.py
crates/schemalint/tests/integration_tests/: part_01.rs  part_02.rs
crates/schemalint/tests/node_tests/: args.rs  args_more.rs  config.rs  e2e.rs  errors.rs  node_error_display.rs  sidecar_errors.rs
crates/schemalint/tests/normalizer_tests/: part_01.rs  part_02.rs  part_03.rs  part_04.rs
crates/schemalint/tests/profile_tests/: additional_errors.rs  anthropic.rs  core_errors.rs  duplicate_restrictions.rs  happy.rs  minimal.rs  openai.rs  restriction_edges.rs  severity_parse.rs  severity_values.rs  structural_limits.rs  utf8.rs
crates/schemalint/tests/python_tests/: part_01.rs  part_02.rs  part_03.rs  part_04.rs
crates/schemalint/tests/rules_tests/: class_a.rs  class_b.rs  metadata.rs  semantic.rs
crates/schemalint/tests/server_tests/: part_01.rs  part_02.rs  part_03.rs  part_04.rs
crates/schemalint/tests/snapshot_tests/: part_01.rs  part_02.rs  part_03.rs
crates/schemalint/tests/snapshots/: snapshot_tests__emit_gha_edge_cases.snap  snapshot_tests__emit_gha_empty.snap  snapshot_tests__emit_gha_multi_diag.snap  snapshot_tests__emit_gha_source_variants.snap  snapshot_tests__emit_human_edge_cases.snap  snapshot_tests__emit_human_empty.snap  snapshot_tests__emit_human_empty_per_file.snap  snapshot_tests__emit_human_multi_diag.snap  snapshot_tests__emit_human_source_variants.snap  snapshot_tests__emit_junit_edge_cases.snap  snapshot_tests__emit_junit_empty_global.snap  snapshot_tests__emit_junit_empty_per_file.snap  snapshot_tests__emit_junit_multi_diag.snap  snapshot_tests__emit_junit_source_variants.snap  snapshot_tests__emit_sarif_edge_cases.snap  snapshot_tests__emit_sarif_empty.snap  snapshot_tests__emit_sarif_multi_diag.snap  snapshot_tests__emit_sarif_rule_ids_sorted.snap  snapshot_tests__emit_sarif_source_variants.snap  snapshot_tests__snapshot_gha_forbidden_keyword.snap  snapshot_tests__snapshot_human_clean_schema.snap  snapshot_tests__snapshot_human_forbidden_keyword.snap  snapshot_tests__snapshot_human_warning_only.snap  snapshot_tests__snapshot_json_batch_with_errors.snap  snapshot_tests__snapshot_json_clean_schema.snap  snapshot_tests__snapshot_json_forbidden_keyword.snap  snapshot_tests__snapshot_junit_forbidden_keyword.snap  snapshot_tests__snapshot_sarif_forbidden_keyword.snap
docs/: docusaurus.config.js  package-lock.json  package.json  phases.md  sidebars.js  sow.md
docs/book/: book.toml
python/schemalint-pydantic/: pyproject.toml
python/schemalint-pydantic/src/schemalint_pydantic/: __init__.py  __main__.py  discover.py  server.py
python/schemalint-pydantic/tests/: test_discover.py  test_server.py
scripts/: check-benchmarks.sh  check-coverage.sh  corpus_cases_part1.py  corpus_cases_part2.py  generate_corpus.py  generate_expected.py
(+156 files in other folders)
