[workspace]
members = ["crates/schemalint", "crates/schemalint-profiles", "crates/schemalint-docgen", "crates/schemalint-conformance", "crates/schemalint-python"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["schemalint contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/1nder-labs/schemalint"
rust-version = "1.80"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = false
codegen-units = 1
