[workspace]
members = ["crates/schemalint", "crates/schemalint-docgen", "crates/schemalint-conformance", "crates/schemalint-python"]
resolver = "2"

[workspace.package]
version = "1.0.1"
edition = "2021"
authors = ["Lahfir"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/1nder-labs/schemalint"
readme = "README.md"
rust-version = "1.80"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = false
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
