[package]
name = "schemalint-conformance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Conformance verification infrastructure for schemalint"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
schemalint-profiles = { path = "../schemalint-profiles" }
