[package]
name = "schemalint-docgen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Rule documentation generator for schemalint"
publish = false

[dependencies]
schemalint = { path = "../schemalint" }
schemalint-profiles = { path = "../schemalint-profiles" }
clap = { version = "4", features = ["derive"] }
