[package]
name = "schemalint"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Static analysis tool for JSON Schema compatibility with LLM structured-output providers"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
indexmap = { version = "2", features = ["serde"] }
dirs = "5.0"
linkme = "0.3"
clap = { version = "4", features = ["derive"] }
rayon = "1"
thiserror = "2"
rustc-hash = "2"
percent-encoding = "2"
schemalint-profiles = { path = "../schemalint-profiles" }

[dev-dependencies]
insta = "1"
proptest = "1"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
criterion = "0.8"
regex = "1"

[[bench]]
name = "schemalint_benchmarks"
harness = false
